kubernetes/infrastructure/kopiur-system/kopiur/repository/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-ui
  namespace: kopiur-system
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - kopia.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoverse-kopia-ui
          port: 51515
